--- a/apps/app1/package.json
+++ b/apps/app1/package.json
@@ -1,10 +1,11 @@
 {
   "name": "app1",
   "version": "0.0.0",
-  "author": "Arneesh Aima",
+  "private": true,
   "scripts": {
     "dev": "vite --port 3001",
     "build": "vite build",
+    "test": "vue-cli-service test:unit",
     "preview": "vite preview --port 5051",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
@@ -13,12 +14,19 @@
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.0",
+    "@types/jest": "^28.1.8",
     "@vitejs/plugin-vue": "^2.2.2",
+    "@vue/cli-plugin-unit-jest": "^5.0.8",
     "@vue/eslint-config-prettier": "^7.0.0",
+    "@vue/test-utils": "^2.0.2",
     "@vue/tsconfig": "^0.1.3",
+    "@vue/vue3-jest": "^28.1.0",
+    "babel-jest": "^29.0.0",
     "eslint": "^8.5.0",
     "eslint-plugin-vue": "^8.2.0",
+    "jest": "^29.0.0",
     "prettier": "^2.5.1",
+    "ts-jest": "^28.0.8",
     "vite": "^2.8.4"
   }
 }
